--- a/public/css/style.css
+++ b/public/css/style.css
@@ -454,6 +454,7 @@ tbody tr:hover {
 /* Pop-up */
 
 #Modal {
+    z-index: 10000;
     position: absolute;
     top: 0;
     left: 0;
